# local-genius

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: architecture.md
src/: __init__.py  api.py  brain.py  config.py  gateway.py  main.py  memory.py  orchestrator.py  safety_monitor.py
tests/: test_memory.py  test_orchestrator.py  test_safety.py
